kubernetes/deploy.yml
# Values in ~~tildes~~ are intended to be replaced
# by Jenkins!
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: sample-app-docker
  name: sample-app-docker
  namespace: customer-1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sample-app-docker
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: sample-app-docker
    spec:
      containers:
        - image: ~~IMAGE~~
          imagePullPolicy: IfNotPresent
          name: sample-app-docker-1
---
apiVersion: v1
kind: Service
metadata:
  name: sample-app-docker-service
  namespace: customer-1
  labels:
    app: sample-app-docker
spec:
  ports:
  - protocol: TCP
    port: 80
  selector:
    app: sample-app-docker
  type: NodePort
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: sample-app-docker-ingress
  namespace: customer-1
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: sample-app-docker-prod-k8s-evolkmann-address
    networking.gke.io/managed-certificates: sample-app-docker-prod-k8s-evolkmann-de-cert
spec:
  rules:
  - host: sample-app-docker.prod.k8s.evolkmann.de
    http:
      paths:
      - path: /
        backend:
          serviceName: sample-app-docker-service
          servicePort: 80
